<resources>
    <string name="app_name">Noty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="current_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="check_your_internet_connection">Please check your internet connection.</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_same_password">Password does not match with confirm password</string>
    <string name="message_username_password_incorrect">Username or password incorrect</string>
    <string name="message_user_signed_up">User Signed Up</string>
    <string name="message_user_signed_in">User Signed In</string>
    <string name="retry">Retry</string>
    <string name="add_note">Add Note</string>
    <string name="note_detail">Note Detail</string>
    <string name="please_enter_note_here">Please enter note here</string>
    <string name="notes_updated">Notes updated</string>



    <string name="back_icon" translatable="false">&#xf060;</string>
    <string name="empty_icon" translatable="false">&#xf06a;</string>
</resources>
