<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rlRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/basic_white"
                android:clickable="true"
                android:focusable="true"
                tools:context=".fragments.acounts.LoginFragment">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <RelativeLayout
                android:id="@+id/llSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/size_device_30"
                android:layout_marginEnd="@dimen/size_device_30">

            <RelativeLayout
                    android:id="@+id/rlLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/size_device_60">

                <ImageView
                        android:id="@+id/iv_app_logo"
                        android:layout_width="@dimen/size_device_100"
                        android:layout_height="@dimen/size_device_100"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/splash_png" />

                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_app_logo"
                        style="@style/BoldText"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size_50"
                        android:text="@string/app_name"

                />



            </RelativeLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlLogo"
                    android:layout_marginTop="@dimen/size_device_30"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/hint_color"
                        app:errorTextAppearance="@style/error_appearance"
                        app:hintTextAppearance="@style/TextInputStyle">


                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_username"
                            style="@style/EditTextMedium1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_device_45"
                            android:hint="@string/username"
                            android:textColor="@color/et_text_color"
                            android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_device_5"
                        android:textColorHint="@color/hint_color"
                        app:errorTextAppearance="@style/error_appearance"
                        app:hintTextAppearance="@style/TextInputStyle">

                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            style="@style/EditTextMedium1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_device_45"
                            android:textColor="@color/et_text_color"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>


                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_sign_in"
                        style="@style/BtnPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_40"
                        android:layout_marginStart="@dimen/size_device_5"
                        android:layout_marginTop="@dimen/size_device_20"
                        android:layout_marginEnd="@dimen/size_device_5"
                        android:text="@string/sign_in"
                        android:textAllCaps="true" />



                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_sign_up"
                        style="@style/BtnTransparent"
                        android:layout_marginTop="@dimen/size_device_10"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_45"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"/>






            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>