<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rlRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/basic_white"
                android:clickable="true"
                android:focusable="true"
                tools:context=".fragments.acounts.SignUpFragment">


    <RelativeLayout
            android:id="@+id/llSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_device_30"
            android:layout_marginStart="@dimen/size_device_30"
            android:layout_marginEnd="@dimen/size_device_30">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_device_5"
                    app:errorTextAppearance="@style/error_appearance"
                    android:textColorHint="@color/hint_color"
                    app:hintTextAppearance="@style/TextInputStyle">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_first_name"
                        style="@style/EditTextMedium1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_45"
                        android:textColor="@color/et_text_color"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_device_5"
                    app:errorTextAppearance="@style/error_appearance"
                    android:textColorHint="@color/hint_color"
                    app:hintTextAppearance="@style/TextInputStyle">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_last_name"
                        style="@style/EditTextMedium1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_45"
                        android:textColor="@color/et_text_color"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/hint_color"
                    android:layout_marginTop="@dimen/size_device_5"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintTextAppearance="@style/TextInputStyle">


                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_username"
                        style="@style/EditTextMedium1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_45"
                        android:hint="@string/username"
                        android:textColor="@color/et_text_color"
                        android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_device_5"
                    app:errorTextAppearance="@style/error_appearance"
                    android:textColorHint="@color/hint_color"
                    app:hintTextAppearance="@style/TextInputStyle">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        style="@style/EditTextMedium1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_45"
                        android:textColor="@color/et_text_color"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_device_5"
                    app:errorTextAppearance="@style/error_appearance"
                    android:textColorHint="@color/hint_color"
                    app:hintTextAppearance="@style/TextInputStyle">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password"
                        style="@style/EditTextMedium1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_device_45"
                        android:textColor="@color/et_text_color"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sign_up"
                    style="@style/BtnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_device_40"
                    android:layout_marginStart="@dimen/size_device_5"
                    android:layout_marginTop="@dimen/size_device_20"
                    android:layout_marginEnd="@dimen/size_device_5"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>